[package]
name = "tylen_bot"
version = "0.1.0"
edition = "2021"

[profile.docker]
inherits = "dev"

[profile.release]
lto = "fat"
strip = "debuginfo"
opt-level = "z"
panic = "abort"
codegen-units = 1

[workspace]
members = [".", "migration"]

[dependencies]
anyhow = "1.0.95"
async-nats = "0.38.0"
dotenv = "0.15.0"
envconfig = "0.11.0"
log = "0.4.25"
once_cell = "1.20.2"
pretty_env_logger = "0.5.0"
rust-i18n = "3.1.2"
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls", "with-uuid", "with-chrono"] }
sentry = "0.36.0"
serde = "1.0.217"
serde_json = "1.0.135"
teloxide = { version = "0.13.0", features = ["macros", "redis-storage"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
migration = { path = "migration" }
uuid = "1.11"
chrono = "0.4.39"
